--- a/dan-wpdata/themes/dan-kiev-ua/style.css
+++ b/dan-wpdata/themes/dan-kiev-ua/style.css
@@ -77,6 +77,161 @@ body {
 	background: rgba(255, 255, 255, 0.3);  
 }
 
+#top {
+	width: 960px;
+	margin: 0 auto;
+	padding: 4px 0 0;	
+	position:relative;
+	z-index:999;
+}
+
+.title {width: 190px; border-radius: 5px;}
+
+
+/* Header */
+
+#topline { 
+	position:fixed;	
+	color: #fff; 
+	font: 12px Verdana, Arial, "Trebuchet MS", Helvetica, sans-serif;
+}
+
+#toplinedan { 	background-color:#FFB546; position:absolute;	left: 6px; padding: 6px; padding-top: 10px;  top: 0;  }
+#toplinedan a {text-decoration: none; color: white;}
+.sz16 {font-size:16px;}
+
+#toplineflags { width: 100px; position: absolute; left: 97px; top: 9px; list-style-type:  none; }
+#toplineflags li {margin: 5px; }
+#toplineflags img {
+	opacity: 0.8;
+    filter: alpha(opacity=80); 
+}
+
+#fbvk {padding-top: 12px;}
+
+#pagenavtop { position: absolute; left: 180px; top: -5px; width: 400px; margin: 0;}
+#pagenavtop li { float: left;  	padding: 0 9px 0 10px;	zoom: 1;	margin: 0; }
+#pagenavtop li a:link, #pagenavtop li a:visited { 	color:#fff; 
+	position: relative;
+	text-decoration: none;
+	z-index: 100;
+	font-size:14px;
+	font-weight:bold;
+	text-shadow: 0px 0px 10px #888;
+}
+#pagenavtop li a:hover, #pagenavtop li.current_page_item a:link, #pagenavtop li.current_page_item a:visited  {
+	padding-bottom: 3px;
+	border-bottom: 2px solid #00C13F;
+}
+
+
+.popis {	position: relative; top: -5px}
+
+#header {
+	text-align: center;
+	padding: 0;  
+	float:right; 
+	margin-top: -16px; margin-right: 10px;
+}
+#header a {display:block; text-decoration: none; color: #FFA319;}
+#header h1 {text-shadow: 0px 0px 10px #888; font: 77px Verdana, Arial, "Trebuchet MS", Helvetica, sans-serif;}
+	
+#description {
+float:left; 	width: 150px; 	text-align: center; 
+font: 16px Verdana, Arial, "Trebuchet MS", Helvetica, sans-serif;
+	line-height: 35px;
+	padding: 0 9px 0 5px;
+	margin-top: 10px; margin-left: 35px;
+}	
+
+#deviz {
+float:right; 	width: 250px; 	text-align: center; 
+font: 20px Verdana, Arial, "Trebuchet MS", Helvetica, sans-serif;
+	line-height: 35px; text-align: right;
+	padding: 0 9px 0 5px;
+	margin-top: 10px; margin-left: 35px;
+
+}
+
+
+/* Page Nav */
+
+#pagenav li a:link, #pagenav li a:visited {
+	position: relative;
+	width: 50%;
+	padding: 14px 8px;
+	text-decoration: none;
+	z-index: 100;
+	font-size:14px;
+	font-weight:bold;
+	text-shadow: 0px 0px 10px #888;
+}
+
+#pagenav li {
+	float: left;
+	line-height: 35px;
+	padding: 0 9px 0 5px;
+	zoom: 1;
+	margin: 0;
+}
+
+#pagenav li a:hover, #pagenav li.current_page_item a:link, #pagenav li.current_page_item a:visited  {
+	position: relative;
+}
+
+#pagenav li a:hover span.left, #pagenav li.current_page_item span.left  {
+	display: block;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 5px;
+	height: 43px;
+	margin-left:-5px;
+}
+
+#pagenav li a:hover span.right, #pagenav li.current_page_item span.right  {
+	display: block;
+	position: absolute;
+	right: 0;	
+	bottom: 0;
+	width: 5px;
+	height: 43px;
+	margin-right:-5px;
+}
+
+#pagenav li a:link, #pagenav li a:visited {
+	color: #fff;
+}
+
+#pagenav li a:hover, #pagenav li.current_page_item a:link, #pagenav li.current_page_item a:visited  {
+	background-color: #FFB546;
+}
+
+#pagenav li a:hover span.left, #pagenav li.current_page_item span.left  {
+}
+
+#pagenav li a:hover span.right, #pagenav li.current_page_item span.right  {
+}
+
+
+/* Top posts */
+
+#tptn_related ul li { background-color: #fff;
+				list-style: none;
+				margin-left: -40px;
+				color: grey;
+				padding: 5px;
+				}
+#tptn_related ul li a {
+				font-size: 12pt;
+			text-decoration: none;
+				}				
+#tptn_related ul li:nth-child(odd) {
+   
+   background-color: #E8E8E8;
+} 		
+				
+
 
 /* Style drop down list */
 
