--- a/ru/prochital/readhist.css
+++ b/ru/prochital/readhist.css
@@ -1,6 +1,22 @@
 body{ margin: 0; padding: 0; background-color: #2f1b34; font-family: Verdana;}
 button {cursor: pointer; }
 
+#toppanel{
+	background-color: #251529;
+	padding: 5px;
+	padding-left: 11px;
+	font-size: 10px;
+	color: white;
+	min-height: 16px;
+	border-bottom: 2px solid #00f4cc;
+}
+#toppanel a{
+	text-decoration: none;
+	color: #00f4cc;
+}
+#toppanel a:hover{
+	color: #f5ecc1;
+}
 
 #infos{
 	width: 100%;
