--- a/ru/prochital/readhist.css
+++ b/ru/prochital/readhist.css
@@ -179,10 +179,28 @@ button {cursor: pointer; }
 	border: 1px solid lightsalmon;
 	background-color: white;
 	border-radius: 6px;
-	font-size: 1.4em;
+	font-size: 1.2em;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+}
+
+.podCover{
+	margin:5px 8px 0;
+	font-size: 0.5em;
+}
+.podCover a {
+	color: black;
+	text-decoration: none;
+}
+
+.insteadCover{
+	margin:5px 8px 0;
+}
+.bkrate {
+	text-align:center; 
+	margin: 3px;
+	margin-bottom: -6px
 }
 
 .gray{
